java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateLocalVariable7.pass
package org.netbeans.test.java.hints;

public abstract class CreateLocalVariable7 {
    
    /** Creates a new instance of AbstractClass */
    public CreateLocalVariable7() {
        
        String foo;{
            foo = "bar";
        }
        foo = "bar";
    }
    
}
